{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 5,
  "lineage": "13144a6b-06f0-48be-dcfd-95011acdfa2e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sg_8080",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03b6c8bd55e00d5ed",
            "arn": "arn:aws:ec2:us-east-2:129561928573:instance/i-07d06e735a7392210",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d06e735a7392210",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0180a731e7ae5cae3",
            "private_dns": "ip-172-31-19-237.us-east-2.compute.internal",
            "private_ip": "172.31.19.237",
            "public_dns": "ec2-18-117-81-116.us-east-2.compute.amazonaws.com",
            "public_ip": "18.117.81.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03a6fe93dc53b4b35",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Allow 8080"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-7f6f9b02",
            "tags": {
              "Name": "terraform-learn-sg_8080"
            },
            "tags_all": {
              "Name": "terraform-learn-sg_8080"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06c3251ee36b58e57"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_8080",
            "aws_security_group.sg_ping",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "sg_ping",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03b6c8bd55e00d5ed",
            "arn": "arn:aws:ec2:us-east-2:129561928573:instance/i-00f3dafa6af66c758",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00f3dafa6af66c758",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-005bd33489b8f2692",
            "private_dns": "ip-172-31-42-219.us-east-2.compute.internal",
            "private_ip": "172.31.42.219",
            "public_dns": "ec2-18-223-131-118.us-east-2.compute.amazonaws.com",
            "public_ip": "18.223.131.118",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07d43fd733224cb44",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "Allow Ping"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-d227789e",
            "tags": {
              "Name": "terraform-learn-sg_ping"
            },
            "tags_all": {
              "Name": "terraform-learn-sg_ping"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c4541bcaed938008"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_8080",
            "aws_security_group.sg_ping",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:129561928573:security-group/sg-06c3251ee36b58e57",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06c3251ee36b58e57",
            "ingress": [],
            "name": "Allow 8080",
            "name_prefix": "",
            "owner_id": "129561928573",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-e352c488"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_ping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:129561928573:security-group/sg-0c4541bcaed938008",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c4541bcaed938008",
            "ingress": [],
            "name": "Allow Ping",
            "name_prefix": "",
            "owner_id": "129561928573",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-e352c488"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_localhost_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_localhost_ping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    }
  ]
}